Fix vertical scrollbar showing

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -39,7 +39,7 @@ footer
   border: 1px solid #d6d6d6
   .chart-content
     direction: ltr
-    height: 100%
+    height: calc(100% - 2px)
     width: 10000px
     .ohclbars
       height: 100%
